<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_cv"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_movie_height"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/movie_card_corners"
    app:cardElevation="@dimen/movie_card_elevation"
    app:cardMaxElevation="@dimen/movie_card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_tiny"
        android:background="@drawable/background_cv_solid">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/movie_image_iv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/padding_tiny"
            android:contentDescription="@string/movie_image_descr"
            android:foreground="@drawable/gradient"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/max_height_movie_image_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <include
            android:id="@+id/movie_restriction_rating"
            layout="@layout/widget_restriction_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
            app:layout_constraintTop_toTopOf="@id/movie_image_iv" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_2x"
            android:layout_marginEnd="@dimen/padding_small"
            android:contentDescription="@string/like_descr"
            android:src="@drawable/favorite_state"
            app:layout_constraintEnd_toEndOf="@id/movie_image_iv"
            app:layout_constraintTop_toTopOf="@id/movie_image_iv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/genre_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_tiny"
            android:gravity="start"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearanceMaterialCustom.Body"
            android:textColor="@color/radical_red"
            android:textSize="@dimen/text_size_body_tiny"
            app:layout_constraintBottom_toTopOf="@id/count_review_tv"
            app:layout_constraintEnd_toEndOf="@id/end_margin_guideline"
            app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
            tools:text="@string/sample_genre" />

        <com.alohagoha.aaaa.ui.utils.customview.ExtRatingBar
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_tiny"
            android:numStars="5"
            android:progressDrawable="@drawable/custom_ratingbar_small"
            app:innerSpacing="@dimen/inner_spacing_rating_bar_on_list_screen"
            app:layout_constraintBottom_toBottomOf="@id/count_review_tv"
            app:layout_constraintEnd_toStartOf="@id/count_review_tv"
            app:layout_constraintStart_toStartOf="@id/start_margin_guideline" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/count_review_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:layout_marginBottom="@dimen/padding_2x"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearanceMaterialCustom.Headline"
            android:textColor="@color/storm_gray"
            android:textSize="@dimen/text_size_body_tiny"
            app:layout_constraintBottom_toBottomOf="@id/movie_image_iv"
            app:layout_constraintEnd_toEndOf="@id/end_margin_guideline"
            app:layout_constraintStart_toEndOf="@id/movie_rating"
            tools:text="@string/sample_count_review" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movie_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearanceMaterialCustom.Headline"
            android:textColor="@color/whisper"
            android:textSize="@dimen/text_size_body"
            app:layout_constraintEnd_toEndOf="@id/end_margin_guideline"
            app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_image_iv"
            tools:text="@string/sample_movie_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/duration_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_2x"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearanceMaterialCustom.Headline"
            android:textColor="@color/smoky"
            android:textSize="@dimen/text_size_body_tiny"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/end_margin_guideline"
            app:layout_constraintStart_toStartOf="@id/start_margin_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_name_tv"
            app:layout_constraintVertical_bias="1.0"
            tools:text="@string/sample_duration" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_margin_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/padding_2x" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_margin_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/padding_2x" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/max_height_movie_image_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/movie_card_max_height_image" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
